--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project</title>
-    <script
-      type="text/javascript"
-      src="https://www.resursecrestine.ro/js/rcws/remote-search.js"
-    ></script>
+    <title>Relaxing Wisdom</title>
     <link
       rel="stylesheet"
       href="https://www.resursecrestine.ro/css/rcws/remote-search.css"
